--- a/OpenWGA/plugins/cm-neo/design/tml/html/util/select-file.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/util/select-file.tml
@@ -1,6 +1,6 @@
 <tml:input name="{$mc.fieldname}" default="{$option_default}" type="hidden"/>
 
-<tml:if condition="tmlform.mode()=='edit'">
+<tml:if condition="tmlform.mode()=='edit' && $option_mode!='view'">
 	<tml:then>
 		<div class="select-image-wrapper">
 			<a href="#" id="select-image-<tml:item name="$mc.fieldname"/>" class="form-control">
