--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/settings-tile.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/settings-tile.tml
@@ -5,7 +5,7 @@
 
 <label><tml:label key="tiles.tile.setting.background-image"/></label>
 <div style="margin:10px">
-	<tml:include ref="util:select-image" o_derivate="usage=poster" o_mode="{option:mode}"/>
+	<tml:include ref="util:select-image" o_empty-text="Kein Hintergrundbild" o_derivate="usage=poster" o_mode="{option:mode}"/>
 </div>
 
 <label><tml:label key="tiles.tile.setting.vertical-align"/></label>
