--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/accordion/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/accordion/render.tml
@@ -36,6 +36,7 @@
 			effectSpeed: "<tml:script expression="CMM.setting('effect_speed')||'fast'"/>"
 			<tml:case condition="CMM.setting('expand_first')==true">
 				,active: 0
+				,delay: 10
 			</tml:case>
 		})
 		<tml:comment>
