#00005482: Removed </source> in audio and video modules

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/html5media/render-html5-audio.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/html5media/render-html5-audio.tml
@@ -55,10 +55,10 @@
 		</tml:case>
 	>
 		<tml:case condition="_mp3">
-			<source src="<tml:url type="file" file="{_mp3}"/>" type="audio/mpeg"></source>
+			<source src="<tml:url type="file" file="{_mp3}"/>" type="audio/mpeg">
 		</tml:case>
 		<tml:case condition="_ogg">
-			<source src="<tml:url type="file" file="{_ogg}"/>" type="audio/ogg"></source>
+			<source src="<tml:url type="file" file="{_ogg}"/>" type="audio/ogg">
 		</tml:case>
 	</audio>
 </div>
