--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/html5media/video.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/html5media/video.tml
@@ -86,7 +86,7 @@
 	<tml:script expression="_urls.keySet()" var="_types"/>
 	<tml:foreach item="_types" currentvalue="_type">
 		<tml:case condition="_urls.get(_type)">
-			<source src="<tml:script expression="_urls.get(_type)"/>" type="<tml:item name="_type"/>"></source>
+			<source src="<tml:script expression="_urls.get(_type)"/>" type="<tml:item name="_type"/>">
 		</tml:case>
 	</tml:foreach>
 	
