--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/render-tile.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/render-tile.tml
@@ -16,7 +16,7 @@
 	}
 
 	_wrap_tag = url ? "a" : "div";
-	_wrap_attribs = (url && STATUS!=content().STATUS_DRAFT) ? 'href="' + url + '" title="' + link_title + '" target="' + link_target + '"' : ''
+	_wrap_attribs = (url && STATUS!=content().STATUS_DRAFT) ? 'href="' + url + '" title="' + link_title + (link_target ? '" target="' + link_target : '') + '"' : ''
 	
 	// calc image derivates width
 	_imagederivates=null;
