#00005482: <video> corrected (removed > in tag content)

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/html5media/video.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/html5media/video.tml
@@ -80,7 +80,7 @@
 	<tml:case condition="CMM.setting('autoplay')">
 		autoplay 
 	</tml:case>
-	style="opacity:0;transition: opacity .2s">
+	style="opacity:0;transition: opacity .2s"
 >
 		
 	<tml:script expression="_urls.keySet()" var="_types"/>
