#00005484: corrented alt-text calculation if file has no extension

--- a/OpenWGA/plugins/cm-neo/design/tml/json/attach-to-document.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/json/attach-to-document.tml
@@ -54,8 +54,11 @@
 				}
 				doc.attachFile(reader, filename);
 				var parts = file_title.split(".");
-				parts.pop();
-				file_title = parts.join(".").replace(/_/g, " ");
+				if(parts.length>1){
+					parts.pop();
+					file_title = parts.join(".")
+				}
+				file_title = file_title.replace(/_/g, " ");
 				doc.getFileMetaData(filename).setTitle(file_title);
 				doc.save();
 			}, doc)(doc, reader, filename, file_title);
