#00005488: _img_alt || $option_title

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/image.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/image.tml
@@ -39,7 +39,7 @@
 	if(filename && c && c.content().hasFile(filename)){
 		_url = c.fileurl(filename);
 		_file_md = c.content().getFileMetaData(filename);
-		_img_alt = _file_md.title;
+		_img_alt = _file_md.title || option('title');
 		_img_title = CMM.setting("title");
 		if(_img_title==null)
 			_img_title = _img_alt;	// backwards compatibilty
@@ -115,7 +115,7 @@
 		<tml:case condition="_img_title">
 			title="<tml:item name="_img_title"/>"
 		</tml:case>
-		alt="<tml:script expression="_img_alt || option('title')"/>"
+		alt="<tml:item name="_img_alt"/>"
 		<tml:case condition="_srcset">
 			srcset="<tml:item name="_srcset"/>"
 		</tml:case>
@@ -168,7 +168,7 @@
 
 <tml:range var="_info" trim="true">
 	<tml:case condition="CMM.settingList('descriptions').contains('title')">
-		<div class="title"><tml:script expression="_img_alt || option('title')"/></div>
+		<div class="title"><tml:item name="_img_alt"/></div>
 	</tml:case>
 	<tml:case condition="CMM.settingList('descriptions').contains('copyright') && _file_md && _file_md.getCopyright()">
 		<div class="copyright">&copy; <tml:script expression="_file_md && _file_md.getCopyright()"/></div>
