#00005492: jquery-plugin Lightbox does not render correctly if site has box-sizing:border-box

--- a/OpenWGA/plugins/afw/design/scripts/css/jquery-lightbox.scss
+++ b/OpenWGA/plugins/afw/design/scripts/css/jquery-lightbox.scss
@@ -29,7 +29,8 @@
 	background: white;
 	padding: 10px;
 	box-shadow: 0 0 20px black;
-
+	box-sizing: content-box;
+	
 	img {
 		max-width: none;
 		max-height: none;
@@ -102,6 +103,7 @@
 		right: 0;
 		height: 40px;
 		white-space: nowrap;
+		box-sizing: content-box;
 		padding: 10px;
 		background: #efefef;
 		border-top: solid #dddddd 1px;
