--- a/OpenWGA/plugins/cm-neo/design/scripts/css/bi-style-injection/wga-item.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/bi-style-injection/wga-item.scss
@@ -1,5 +1,5 @@
 /* WGA-Item structure:
- * 	<div class="WGA.Item">
+ * 	<div class="WGA-Item">
  *		<div class="WGA-Item-Info">...</div>
  *		<div class="WGA-Item-Label">...</div>
  *		<div class="WGA-Item-Edit">...</div>
