css lightbox corrected

--- a/OpenWGA/plugins/afw/design/scripts/css/jquery-lightbox.scss
+++ b/OpenWGA/plugins/afw/design/scripts/css/jquery-lightbox.scss
@@ -109,8 +109,8 @@
 		padding: 10px;
 		background: #efefef;
 		border-top: solid #dddddd 1px;
-		font-size: 12px;
-		.image-title, image-group {
+		font-size: 14px;
+		.image-title, .image-group {
 			overflow: hidden;
 			text-overflow: ellipsis;
 		}
