--- a/OpenWGA/plugins/cm-neo/design/tml/html/bootstrap/portlet.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/bootstrap/portlet.tml
@@ -1,4 +1,7 @@
 <tml:eventscript onevent="setMainPortletMode">
+	var contentkey = portletEvent.getParameter("contentkey")
+	if(contentkey)
+		portlet.contentkey = contentkey;
 	portlet.setmode(portletEvent.getParameter("mode"))
 </tml:eventscript>
 
